# vxis

./: -  .bandit-baseline.json  .env.example  .gitignore  ARCHITECTURE.md  CLAUDE.md  Dockerfile  FEATURES.md  GITHUB_ACTIONS.md  LICENSE  PHASE_STATUS.md  README.md  alembic.ini  config.toml  docker-compose.yml  generate_benchmark_reports.py  pyproject.toml  report_2.html  report_https___kinetics-dev.protopie.works_.html  test_targets.txt  vxis.db-shm  vxis.db-wal
.github/: README.md  dependabot.yml
.github/workflows/: action-bridge.yml  auto-implement.yml  benchmark.yml  cve-watch.yml  daily-digest.yml  domain-intel.yml  growth-digest.yml  growth-loop.yml  lint.yml  security.yml  signal-analyze.yml  signal-ingest.yml  test.yml  upstream-watch.yml
.vxis/: growth_log.jsonl
alembic/: README.md  env.py
alembic/versions/: 001_initial_schema.py
benchmarks/juice_shop/: after_fillform_fix_2026-04-20.score.json  after_phase11_2026-04-20.score.json  after_phase1_2026-04-17.score.json  after_phase1_v2_2026-04-17.score.json  baseline_2026-04-17.score.json  noise_run_1_2026-04-17.score.json
configs/: README.md  growth_bootstrap.toml  trust_scores.json
configs/scopes/: default.json
docker/sandbox/: Dockerfile  README.md  vxis_tool_server.py
docs/: BLUEPRINT.md  CONFIGURATION.md  LOCAL_LLM_RUNBOOK.md  README.md  SCAN_SCHEDULING.md  SCORING.md  VXIS_PROCESS_HARDENING_REPORT.md  scfw-blocked.md
docs/chapters/: 01-phase-a-architecture-migration.md  02-phase-b-day1-findings-breakthrough.md  03-phase-b-day2-playbook-pivot.md  04-phase-b-day2-fingerprint-memory.md  05-phase-b-day2-sqlmap-critic-stabilization.md  06-phase-c-verifier-belief-egress.md  README.md
docs/growth-digests/: 2026-04-12.md  2026-04-19.md  2026-05-03.md  2026-05-10.md  2026-05-17.md  2026-05-24.md  2026-05-31.md  2026-06-07.md  2026-06-14.md  2026-06-21.md  2026-06-28.md  2026-07-05.md  2026-07-12.md  2026-07-19.md
docs/superpowers/: CONSOLIDATION.md  DECISIONS.md  README.md
docs/v3/: README.md
examples/manifests/: protopie-suite.yml
incubator/: README.md
incubator/sdk_runtime/: README.md  requirements.txt
infra/benchmarks/: README.md  league-v2-smoke.json  webgoat.yml
plans/: 2026-04-05-vps-redteam-infra.md  NOW_ROADMAP.md  README.md  now1_verifier_all_severity.md
scripts/: README.md  auto_pentest.py  brain_scan.py  check_phase_sync.py  context_audit.py  enrich_report.py  generate_ncc_report.py  migrate_agent_memory_to_pti.py  quick_probe.py  rebuild_report.py
src/vxis/: README.md  __init__.py  mcp_server.py  registry.py  skillopt_bridge.py
tests/: README.md  conftest.py
tests/agent/: test_agent_graph_runtime.py  test_agent_system_prompt.py  test_anthropic_prompt_cache.py  test_auto_orchestration_v3.py  test_brain_hybrid_config.py  test_branch_evidence_bounds.py  test_context_budget.py  test_cost_budget.py  test_director_prompt.py  test_director_protocol.py  test_dispatch_ceiling_gate.py  test_find_finding_by_id.py  test_finish_gate_dag.py  test_memory_dualwrite.py  test_memory_recall_parity.py  test_now1_3_verdict.py  test_operator_inbox.py  test_prioritizer_absorption.py  test_replay_gate.py  test_run_skill_description.py  test_scan_loop.py  test_scan_loop_agent_graph.py  test_scan_loop_brain.py  test_scan_loop_chains.py  test_scan_loop_finish_gate.py  test_scan_loop_run_followups.py  test_scan_loop_sandbox_credit.py  test_scan_loop_skills_returned.py  test_scan_loop_state_bounds.py  test_scan_loop_surface_guard.py  test_scan_loop_ui_events.py  test_scan_loop_v3.py  test_sdk_child_runtime.py  test_sdk_runtime.py  test_text_clean.py  (+5 more)
tools/: README.md  action_bridge.py  brain_tui.py  cve_to_vector.py  growth_loop_runner.py  pytest_safe.py
wiki/: CLAUDE.md  index.md  log.md  protopie-validation.md
(+1251 files in other folders)
