[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vxis"
version = "0.1.0"
description = "AI-powered security automation platform"
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy>=2.0,<3",
    "aiosqlite>=0.20,<1",
    "typer>=0.15,<1",
    "rich>=13.0,<14",
    "jinja2>=3.1,<4",
    "dnspython>=2.7,<3",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0,<9",
    "pytest-asyncio>=0.24,<1",
    "pytest-cov>=6.0,<7",
    "ruff>=0.8,<1",
]

[project.scripts]
vxis = "vxis.cli.main:app"

[tool.hatch.build.targets.wheel]
packages = ["src/vxis"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"

[tool.ruff]
target-version = "py312"
line-length = 100
