[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "vxis"
version = "0.2.0"
description = "AI-powered security automation platform"
license = "Apache-2.0"
license-files = ["LICENSE"]
requires-python = ">=3.12"
dependencies = [
    "pydantic>=2.9,<3",
    "pydantic-settings>=2.7,<3",
    "sqlalchemy>=2.0,<3",
    "greenlet>=3.1,<4",
    "alembic>=1.13,<2",
    "aiosqlite>=0.20,<1",
    "typer>=0.15,<1",
    "rich>=13.0,<14",
    "jinja2>=3.1,<4",
    "PyYAML>=6.0.2,<7",
    "dnspython>=2.7,<3",
    "InquirerPy>=0.3,<1",
    "networkx>=3.3",
    "anthropic>=0.40.0",
    "httpx>=0.28,<1",  # CPR Hands — HTTP 세션 매니저
    "textual>=6.2.1",
]

[project.optional-dependencies]
dev = [
    "pytest>=9.0.3,<10",
    "pytest-asyncio>=1.3,<2",
    "pytest-cov>=6.0,<8",
    "ruff>=0.8,<1",
]
dashboard = [
    "fastapi>=0.115,<1",
    "uvicorn>=0.34,<1",
    "httpx>=0.28,<1",
]
export = [
    "python-docx>=1.1,<2",
]
pdf = [
    "weasyprint>=68,<69",
]
browser = [
    "playwright>=1.49",  # CPR Eyes — Playwright + CDP 브라우저
]
proxy = [
    "mitmproxy>=11.0",   # CPR X-Ray — 트래픽 인터셉트
]
all = [
    "vxis[dashboard]",
    "vxis[export]",
    "vxis[pdf]",
    "vxis[browser]",
    "vxis[proxy]",
]

[project.scripts]
vxis = "vxis.cli.main:app"
vxis-mcp = "vxis.mcp_server:main"

[tool.hatch.build.targets.wheel]
packages = ["src/vxis"]

[tool.hatch.build]
include = [
    "src/vxis/**/*.py",
    "src/vxis/**/*.json",
    "src/vxis/**/*.html",
    "src/vxis/**/*.css",
    "src/vxis/**/*.md",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
asyncio_mode = "auto"
markers = [
    "live: requires live LLM/network; excluded from the per-PR deterministic tier",
]

[tool.ruff]
target-version = "py312"
line-length = 100
